@@ -4,6 +4,7 @@ import io.scalecube.services.Reflect;
 import io.scalecube.services.ServiceEndpoint;
 import io.scalecube.services.ServiceInfo;
 import io.scalecube.services.ServiceReference;
+import io.scalecube.services.api.DynamicQualifier;
 import io.scalecube.services.api.ServiceMessage;
 import io.scalecube.services.methods.MethodInfo;
 import io.scalecube.services.methods.ServiceMethodInvoker;
@@ -16,11 +17,8 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.jctools.maps.NonBlockingHashMap;
 import reactor.core.scheduler.Scheduler;
 
@@ -34,9 +32,13 @@ public class ServiceRegistryImpl implements ServiceRegistry {
   private final Map<String, ServiceEndpoint> serviceEndpoints = new NonBlockingHashMap<>();
   private final Map<String, List<ServiceReference>> serviceReferencesByQualifier =
       new NonBlockingHashMap<>();
+  private final Map<String, ServiceMethodInvoker> methodInvokerByQualifier =
+      new NonBlockingHashMap<>();
+  private final Map<DynamicQualifier, List<ServiceReference>> serviceReferencesByPattern =
+      new NonBlockingHashMap<>();
+  private final Map<DynamicQualifier, ServiceMethodInvoker> methodInvokerByPattern =
+      new NonBlockingHashMap<>();
   private final List<ServiceInfo> serviceInfos = new CopyOnWriteArrayList<>();
-  private final ConcurrentMap<String, ServiceMethodInvoker> methodInvokers =
-      new ConcurrentHashMap<>();
 
   public ServiceRegistryImpl(Map<String, Scheduler> schedulers) {
     this.schedulers = schedulers;
@@ -50,46 +52,73 @@ public class ServiceRegistryImpl implements ServiceRegistry {
 
   @Override
   public List<ServiceReference> listServiceReferences() {
-    return serviceReferencesByQualifier.values().stream()
-        .flatMap(Collection::stream)
-        .collect(Collectors.toList());
+    return Stream.concat(
+            serviceReferencesByQualifier.values().stream().flatMap(Collection::stream),
+            serviceReferencesByPattern.values().stream().flatMap(Collection::stream))
+        .toList();
   }
 
   @Override
   public List<ServiceReference> lookupService(ServiceMessage request) {
-    List<ServiceReference> list = serviceReferencesByQualifier.get(request.qualifier());
-    if (list == null || list.isEmpty()) {
-      return Collections.emptyList();
+    final var contentType = request.dataFormatOrDefault();
+    final var qualifier = request.qualifier();
+
+    // Match by exact-match
+
+    final var list = serviceReferencesByQualifier.get(qualifier);
+    if (list != null) {
+      return list.stream().filter(sr -> sr.contentTypes().contains(contentType)).toList();
     }
-    String contentType = request.dataFormatOrDefault();
-    return list.stream()
-        .filter(sr -> sr.contentTypes().contains(contentType))
-        .collect(Collectors.toList());
+
+    // Match by dynamic-qualifier
+
+    for (var entry : serviceReferencesByPattern.entrySet()) {
+      final var dynamicQualifier = entry.getKey();
+      if (dynamicQualifier.matchQualifier(qualifier) != null) {
+        return entry.getValue();
+      }
+    }
+
+    return Collections.emptyList();
   }
 
   @Override
   public boolean registerService(ServiceEndpoint serviceEndpoint) {
-    boolean success = serviceEndpoints.putIfAbsent(serviceEndpoint.id(), serviceEndpoint) == null;
-    if (success) {
+    boolean putIfAbsent =
+        serviceEndpoints.putIfAbsent(serviceEndpoint.id(), serviceEndpoint) == null;
+    if (putIfAbsent) {
+      serviceEndpoint.serviceReferences().forEach(this::addServiceReference);
       LOGGER.log(Level.DEBUG, "ServiceEndpoint registered: {0}", serviceEndpoint);
-      serviceEndpoint.serviceReferences().forEach(this::populateServiceReferences);
     }
-    return success;
+    return putIfAbsent;
   }
 
   @Override
   public ServiceEndpoint unregisterService(String endpointId) {
     ServiceEndpoint serviceEndpoint = serviceEndpoints.remove(endpointId);
     if (serviceEndpoint != null) {
+      // Clean exact-match service references
+
+      serviceReferencesByQualifier.values().stream()
+          .flatMap(Collection::stream)
+          .filter(sr -> sr.endpointId().equals(endpointId))
+          .forEach(
+              value ->
+                  serviceReferencesByQualifier.compute(
+                      value.qualifier(), (key, list) -> removeServiceReference(value, list)));
+
+      // Clean dynamic-qualifier service references
+
+      serviceReferencesByPattern.values().stream()
+          .flatMap(Collection::stream)
+          .filter(sr -> sr.endpointId().equals(endpointId))
+          .forEach(
+              value ->
+                  serviceReferencesByPattern.compute(
+                      value.dynamicQualifier(),
+                      (key, list) -> removeServiceReference(value, list)));
+
       LOGGER.log(Level.DEBUG, "ServiceEndpoint unregistered: {0}", serviceEndpoint);
-
-      List<ServiceReference> serviceReferencesOfEndpoint =
-          serviceReferencesByQualifier.values().stream()
-              .flatMap(Collection::stream)
-              .filter(sr -> sr.endpointId().equals(endpointId))
-              .toList();
-
-      serviceReferencesOfEndpoint.forEach(this::cleanServiceReferences);
     }
     return serviceEndpoint;
   }
@@ -133,7 +162,7 @@ public class ServiceRegistryImpl implements ServiceRegistry {
                                   Reflect.isSecured(method),
                                   Reflect.executeOnScheduler(serviceMethod, schedulers));
 
-                          checkMethodInvokerDoesntExist(methodInfo);
+                          checkMethodInvokerIsNotPresent(methodInfo);
 
                           ServiceMethodInvoker methodInvoker =
                               new ServiceMethodInvoker(
@@ -147,42 +176,73 @@ public class ServiceRegistryImpl implements ServiceRegistry {
                                   serviceInfo.logger(),
                                   serviceInfo.level());
 
-                          methodInvokers.put(methodInfo.qualifier(), methodInvoker);
+                          if (methodInfo.dynamicQualifier() == null) {
+                            methodInvokerByQualifier.put(methodInfo.qualifier(), methodInvoker);
+                          } else {
+                            methodInvokerByPattern.put(
+                                methodInfo.dynamicQualifier(), methodInvoker);
+                          }
                         }));
   }
 
-  private void checkMethodInvokerDoesntExist(MethodInfo methodInfo) {
-    if (methodInvokers.containsKey(methodInfo.qualifier())) {
+  private void checkMethodInvokerIsNotPresent(MethodInfo methodInfo) {
+    if (methodInvokerByQualifier.containsKey(methodInfo.qualifier())) {
       LOGGER.log(Level.ERROR, "MethodInvoker already exists, methodInfo: {0}", methodInfo);
       throw new IllegalStateException("MethodInvoker already exists");
+    }
+    if (methodInfo.dynamicQualifier() != null) {
+      if (methodInvokerByPattern.containsKey(methodInfo.dynamicQualifier())) {
+        LOGGER.log(Level.ERROR, "MethodInvoker already exists, methodInfo: {0}", methodInfo);
+        throw new IllegalStateException("MethodInvoker already exists");
+      }
     }
   }
 
   @Override
   public ServiceMethodInvoker getInvoker(String qualifier) {
-    return methodInvokers.get(Objects.requireNonNull(qualifier, "[getInvoker] qualifier"));
+    // Match by exact-match
+
+    final var methodInvoker = methodInvokerByQualifier.get(qualifier);
+    if (methodInvoker != null) {
+      return methodInvoker;
+    }
+
+    // Match by dynamic-qualifier
+
+    for (var entry : methodInvokerByPattern.entrySet()) {
+      final var invoker = entry.getValue();
+      final var dynamicQualifier = invoker.methodInfo().dynamicQualifier();
+      if (dynamicQualifier.matchQualifier(qualifier) != null) {
+        return invoker;
+      }
+    }
+
+    return null;
   }
 
   @Override
   public List<ServiceInfo> listServices() {
-    return serviceInfos;
+    return new ArrayList<>(serviceInfos);
   }
 
-  private void populateServiceReferences(ServiceReference sr) {
-    serviceReferencesByQualifier
-        .computeIfAbsent(sr.qualifier(), key -> new CopyOnWriteArrayList<>())
-        .add(sr);
+  private void addServiceReference(ServiceReference sr) {
+    if (sr.dynamicQualifier() == null) {
+      serviceReferencesByQualifier
+          .computeIfAbsent(sr.qualifier(), key -> new CopyOnWriteArrayList<>())
+          .add(sr);
+    } else {
+      serviceReferencesByPattern
+          .computeIfAbsent(sr.dynamicQualifier(), key -> new CopyOnWriteArrayList<>())
+          .add(sr);
+    }
   }
 
-  private void cleanServiceReferences(ServiceReference sr) {
-    serviceReferencesByQualifier.compute(
-        sr.qualifier(),
-        (key, list) -> {
-          if (list == null || list.isEmpty()) {
-            return null;
-          }
-          list.remove(sr);
-          return !list.isEmpty() ? list : null;
-        });
+  private static List<ServiceReference> removeServiceReference(
+      ServiceReference value, List<ServiceReference> list) {
+    if (list == null || list.isEmpty()) {
+      return null;
+    }
+    list.remove(value);
+    return list.isEmpty() ? null : list;
   }
 }
